fix: wrap top chart div * this prevents overflow in case there is an additional metric like kudosu ranking * also use `flex-direction: column` instead of `display: grid`

--- a/extension/src/content-script/osu/styles.css
+++ b/extension/src/content-script/osu/styles.css
@@ -6,8 +6,11 @@
     .cavitedev-topic-flag {
         margin-left: 4px !important;
     }
+    .profile-detail__chart-numbers--top {
+        flex-wrap: wrap;
+    }
     .profile-detail__values:nth-child(2) {
-        display: grid;
+        flex-direction: column;
         gap: 10px !important;
     }
 }
